--- a/package.json
+++ b/package.json
@@ -10,24 +10,48 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "6.7.0",
+    "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-query": "^3.39.3",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.85",
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.5.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "expo": "^51.0.21",
+    "expo-modules-core": "^1.12.19",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.3",
+    "jest-extended": "^4.0.2",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "msw": "^0.35.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.2.3",
     "typescript": "5.0.4"
   },
   "engines": {
